<resources>
    <string name="app_name">ledger-companion</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">ledger-companion</string>
    <string name="nav_header_subtitle" translatable="false">raccacio@poli.ufrj.br</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_fileread" translatable="false">File Read</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="date">%d/%d/%d</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
