<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ledger_companion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.example.ledger_companion.ui.gallery.GalleryFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_fileread"
        android:name="com.example.ledger_companion.ui.fileread.FilereadFragment"
        android:label="@string/menu_fileread"
        tools:layout="@layout/fragment_fileread" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.ledger_companion.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.ledger_companion.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.ledger_companion.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <activity
        android:id="@+id/nav_settings"
        android:name="com.example.ledger_companion.SettingsActivity"
        android:label="SettingsActivity" />
    <activity
        android:id="@+id/addTransactionActivity"
        android:name="com.example.ledger_companion.AddTransactionActivity"
        android:label="activity_add_transaction"
        tools:layout="@layout/activity_add_transaction" />
</navigation>